--- a/src/app/modules/newsfeed/activity-v2/activity.component.html
+++ b/src/app/modules/newsfeed/activity-v2/activity.component.html
@@ -44,13 +44,13 @@
             iconId="chevron_left"
             [sizeFactor]="1.8"
             [rem]="true"
-            (click)="previousBoost.emit()"
+            (click)="emitPreviousBoost()"
           ></m-icon
           ><m-icon
             iconId="chevron_right"
             [sizeFactor]="1.8"
             [rem]="true"
-            (click)="nextBoost.emit()"
+            (click)="emitNextBoost()"
           ></m-icon>
         </div>
       </div>
