--- a/src/app/modules/newsfeed/activity-v2/permalink/permalink.component.html
+++ b/src/app/modules/newsfeed/activity-v2/permalink/permalink.component.html
@@ -1,7 +1,9 @@
 <div
   class="m-activity__permalink"
   [ngClass]="{
-    addTopSpacing: addTopSpacing || (service.shouldShowPaywall$ | async)
+    'm-activity__permalink--addTopSpacing':
+      addTopSpacing || (service.shouldShowPaywall$ | async),
+    'm-activity__permalink--statusBehindPaywall': isStatusBehindPaywall
   }"
 >
   <a
