--- a/src/app/modules/wire/lock-screen/wire-lock-screen.component.ng.scss
+++ b/src/app/modules/wire/lock-screen/wire-lock-screen.component.ng.scss
@@ -9,8 +9,15 @@
   z-index: 2;
 
   &.m-wireLockScreen--activityV2 {
-    // ojm todo?
-    // if no need, remove hostBinding as well
+    // Shift button toward center of image posts
+    // when accompanied by top message text
+    .m-wire__lockScreen.isMedia {
+      &:not(.isVideo):not(.isTextOnly):not(.m-wire__lockScreen--minimalMode) {
+        .m-wireLockScreen__inner {
+          margin-top: -$spacing12;
+        }
+      }
+    }
   }
 
   .m-wire__lockScreen {
