--- a/src/app/modules/comments/thread/thread.component.ng.scss
+++ b/src/app/modules/comments/thread/thread.component.ng.scss
@@ -2,6 +2,25 @@
 
 :host {
   // ******************************************
+  // ** ACTIVITY V2 DEFAULT **
+  // ******************************************
+
+  m-activityV2 & {
+    .m-comments__thread {
+      margin: 0;
+    }
+    .m-comments__thread--topLevel {
+      ::ng-deep {
+        > m-comment {
+          .m-comment {
+            padding-left: 0px;
+          }
+        }
+      }
+    }
+  }
+
+  // ******************************************
   // ** MODAL **
   // ******************************************
 
