--- a/src/app/modules/newsfeed/activity-v2/content/content.component.html
+++ b/src/app/modules/newsfeed/activity-v2/content/content.component.html
@@ -1,16 +1,23 @@
 <!-- ----------------------------------- -->
+<!-- PAYWALL BADGE -->
+<!-- Minimal Mode only -->
+<!-- Otherwise it is in owner block -->
+<!-- ----------------------------------- -->
+<m-paywallBadge
+  *ngIf="isMinimalMode"
+  [entity]="entity"
+  [showTierName]="false"
+></m-paywallBadge>
+<!-- ----------------------------------- -->
 <!-- PAYWALL -->
 <!-- ----------------------------------- -->
-<ng-container *mIfFeature="'paywall-2020'">
-  <ng-container *ngIf="!hideMedia">
-    <m-activityV2__paywall
-      *ngIf="service.shouldShowPaywall$ | async"
-      [mediaHeight]="mediaHeight"
-      [mediaWidth]="mediaWidth"
-      class="isPaywall2020"
-    ></m-activityV2__paywall
-  ></ng-container>
-</ng-container>
+<!-- Acts as a background overlay so user
+can click anywhere on
+post content to trigger upgrade modal -->
+<ng-container
+  [ngTemplateOutlet]="paywallTemplate"
+  [ngTemplateOutletContext]="{ hideText: !isStatus }"
+></ng-container>
 <!-- ----------------------------------- -->
 <!-- TEXT (WHEN TEXT ON TOP)-->
 <!-- ----------------------------------- -->
@@ -22,6 +29,10 @@
 <!-- ----------------------------------- -->
 <ng-container *ngIf="!hideMedia">
   <div class="m-activityContent__media--richEmbed" *ngIf="isRichEmbed">
+    <ng-container
+      *ngTemplateOutlet="paywallTemplate"
+      [ngTemplateOutletContext]="{ hideText: 'false' }"
+    ></ng-container>
     <div class="m-activityContent__fixedHeightSpacer"></div>
     <minds-rich-embed
       (mediaModalRequested)="onModalRequested($event)"
@@ -30,8 +41,8 @@
       [isModal]="isModal"
       [activityV2Feature]="true"
       [displayAsColumn]="
-        service.displayOptions.minimalMode ||
-        service.displayOptions.isModal ||
+        isMinimalMode ||
+        isModal ||
         service.displayOptions.showBoostRotatorButtons
       "
     >
@@ -43,28 +54,35 @@
   <!-- ----------------------------------- -->
   <div
     class="m-activityContent__media--video m-activityContent__media"
-    #videoEl
     *ngIf="isVideo"
     [ngClass]="{
       isPaywall: service.shouldShowPaywall$ | async,
       'm-activityContent__media--video--modal': isModal
     }"
   >
-    <div class="m-activityContent__fixedHeightSpacer"></div>
+    <!-- ojm this paywall here isnt going to work? maybe put in as input flag or ng-content -->
+    <div>
+      <div class="m-activityContent__fixedHeightSpacer"></div>
 
-    <m-videoPlayer--scrollaware
-      [guid]="videoGuid"
-      [shouldPlayInModal]="!isModal"
-      (mediaModalRequested)="onModalRequested($event)"
-      [autoplay]="
-        service.displayOptions.autoplayVideo &&
-        !(service.shouldShowPaywall$ | async)
-      "
-      [style.height]="isModal ? null : videoHeight"
-      [isModal]="isModal"
-      [style.overflow]="videoHeight && !isModal ? 'hidden' : null"
-    ></m-videoPlayer--scrollaware>
-
+      <m-videoPlayer--scrollaware
+        #videoEl
+        [guid]="videoGuid"
+        [shouldPlayInModal]="!isModal"
+        (mediaModalRequested)="onModalRequested($event)"
+        [autoplay]="
+          service.displayOptions.autoplayVideo &&
+          !(service.shouldShowPaywall$ | async)
+        "
+        [style.height]="isModal ? null : videoHeight"
+        [isModal]="isModal"
+        [style.overflow]="videoHeight && !isModal ? 'hidden' : null"
+      >
+        <ng-container
+          *ngTemplateOutlet="paywallTemplate"
+          [ngTemplateOutletContext]="{ hideText: 'false' }"
+        ></ng-container>
+      </m-videoPlayer--scrollaware>
+    </div>
     <div class="m-activityContent__fixedHeightSpacer"></div>
   </div>
   <!-- ----------------------------------- -->
@@ -72,12 +90,10 @@
   <!-- ----------------------------------- -->
   <div
     class="m-activityContent__media--image m-activityContent__media"
-    #imageEl
     *ngIf="isImage"
     [ngClass]="{
       'm-activityContent__media--extraTallImage':
-        extraTallImage &&
-        (service.displayOptions.isFeed || service.displayOptions.minimalMode),
+        extraTallImage && (service.displayOptions.isFeed || isMinimalMode),
       'm-activityContent__media--extraWideImage':
         extraWideImage && service.displayOptions.isFeed
     }"
@@ -101,8 +117,13 @@
       ></a>
     </ng-container>
 
-    <ng-template #image
-      ><img
+    <ng-template #image>
+      <ng-container
+        *ngTemplateOutlet="paywallTemplate"
+        [ngTemplateOutletContext]="{ hideText: 'false' }"
+      ></ng-container>
+      <img
+        #imageEl
         [src]="imageUrl"
         (error)="onImageError($event)"
         (click)="onModalRequested($event)"
@@ -111,7 +132,7 @@
         [style.object-fit]="
           (service.shouldShowPaywall$ | async) ? 'cover' : undefined
         "
-        [style.height]="service.displayOptions.isModal ? imageHeight : 'auto'"
+        [style.height]="isModal ? imageHeight : 'auto'"
     /></ng-template>
   </div>
 </ng-container>
@@ -124,6 +145,11 @@
     class="m-activityContent__quote"
     [class.m-activityContent__quote--hasText]="!!text"
   >
+    <!-- ojm keep the paywall here? -->
+    <ng-container
+      *ngTemplateOutlet="paywallTemplate"
+      [ngTemplateOutletContext]="{ hideText: 'false' }"
+    ></ng-container>
     <m-activityV2__quote
       [parentService]="service"
       [entity]="service.entity$ | async"
@@ -169,28 +195,28 @@
       #textEl
       m-read-more
       class="m-activityContent__textWrapper"
-      [class.m-activityContent__textWrapper--shortStatus]="shortStatus"
-      [class.m-activityContent__textWrapper--mediumStatus]="mediumStatus"
       [maxHeightAllowed]="maxHeightAllowed || maxTextHeight"
       *ngIf="bodyText?.length >= 1 || titleText?.length >= 1"
     >
-      <div
-        class="m-activityContentText__innerWrapper"
-        [ngClass]="{
-          'm-activityContentText--translated':
-            service.displayOptions.showTranslation
-        }"
-      >
+      <div class="m-activityContentText__innerWrapper">
         <p
           *ngIf="titleText"
           [innerHtml]="titleText | tags"
           class="m-activityContentText__title"
-          [class.m-activityContentText__title--noDescription]="!bodyText"
+          [class.m-activityContentText__title--hasDescription]="bodyText"
+          [ngClass]="{
+            'm-activityContentText--translated': showTranslation
+          }"
         ></p>
         <p
           *ngIf="bodyText && !hideBodyText"
           class="m-activityContentText__body"
+          [class.m-activityContentText__body--shortStatus]="shortStatus"
+          [class.m-activityContentText__body--mediumStatus]="mediumStatus"
           [innerHtml]="bodyText | tags | codeHighlight"
+          [ngClass]="{
+            'm-activityContentText--translated': showTranslation
+          }"
         ></p>
         <m-read-more--button
           *ngIf="
@@ -210,8 +236,8 @@
       <!-- ----------------------------------- -->
       <ng-container *mIfBrowser>
         <m-translate
-          *ngIf="service.displayOptions.showTranslation"
-          [open]="service.displayOptions.showTranslation"
+          *ngIf="showTranslation"
+          [open]="showTranslation"
           [entity]="entity"
           [translateEvent]="translateEvent"
           (onTranslate)="onTranslate($event)"
@@ -225,3 +251,15 @@
     <div class="m-activityContent__fixedHeightSpacer" *ngIf="isStatus"></div>
   </ng-container>
 </ng-template>
+<!-- ----------------------------------- -->
+<!-- TEMPLATE: PAYWALL -->
+<!-- ----------------------------------- -->
+<!-- Hide text only for the paywall that covers the entire size of the content component.  -->
+<!-- ojm remove mediaHeight? [mediaHeight]="mediaHeight"-->
+<ng-template #paywallTemplate let-hide="hideText"
+  ><ng-container *ngIf="!hideMedia">
+    <m-activityV2__paywall
+      *ngIf="service.shouldShowPaywall$ | async"
+      [hideText]="hide"
+    ></m-activityV2__paywall></ng-container
+></ng-template>
