--- a/src/app/modules/newsfeed/activity-v2/content/content.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/content/content.component.ng.scss
@@ -23,7 +23,6 @@
       flex-direction: column;
     }
     .m-activityContent__media--image img {
-      max-height: 100%;
       height: 100%;
     }
 
@@ -62,16 +61,14 @@
   &.m-activity__content--minimalMode {
     // MINIMAL TEXT
     .m-activityContent__textWrapper {
-      padding-left: $minimalModeSpacing !important;
-      padding-right: $minimalModeSpacing !important;
+      padding-left: $activitySpacing--minimalMode !important;
+      padding-right: $activitySpacing--minimalMode !important;
 
       .m-activityContentText__innerWrapper {
         padding: 0;
       }
 
       .m-activityContentText__title {
-        @include heading4Medium;
-        padding: $spacing4 0;
         margin-bottom: 0;
       }
 
@@ -165,8 +162,7 @@
       overflow: visible;
       box-sizing: border-box;
       margin-top: 5px;
-      padding: $modalScrollableContainerSpacing $modalScrollableContainerSpacing
-        0;
+      padding: $activitySpacing--modal $activitySpacing--modal 0;
 
       .m-read-more--button {
         padding-bottom: 0;
@@ -184,7 +180,7 @@
         ::ng-deep m-translate {
           > div {
             hr {
-              margin-top: $modalScrollableContainerSpacing !important;
+              margin-top: $activitySpacing--modal !important;
               @include m-theme() {
                 border-top: none;
               }
@@ -267,7 +263,7 @@
 
   m-ads-boost & {
     .m-activityContent__textWrapper {
-      padding: 0 $minimalModeSpacing;
+      padding: 0 $activitySpacing--minimalMode;
     }
 
     .m-activityContent__media {
@@ -293,7 +289,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    height: calc(100% - $spacing10);
+    height: calc(100% - 60px);
     transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
 
     @include m-theme() {
@@ -453,14 +449,14 @@
 
   // TITLE
   .m-activityContentText__title {
-    @include heading4Bold;
+    @include body2Medium;
     margin-bottom: 0;
     @include m-theme() {
       color: themed($m-textColor--primary);
     }
 
-    .m-activityContentText__title--hasDescription {
-      margin-bottom: $spacing2 !important;
+    &.m-activityContentText__title--hasDescription {
+      margin-bottom: $spacing1 !important;
     }
 
     ::ng-deep a {
