--- a/src/app/modules/newsfeed/activity-v2/shared.scss
+++ b/src/app/modules/newsfeed/activity-v2/shared.scss
@@ -1,53 +1,71 @@
-// Store variables here that are shared among a variety of components
+// Variables that are shared among a variety of components
+// that relate to activities in different contexts
 
-// ojm change the names of these variables
-// ojm add documentation
 ///////////////////////////////////////////
 // AVATAR
 ///////////////////////////////////////////
-$avatarWidth: $spacing10;
+
+$activityAvatarWidth: $spacing10;
+
 ///////////////////////////////////////////
 // FEED
 ///////////////////////////////////////////
-$feedAvatarSpacingLeft: $spacing8;
-$feedAvatarSpacingRight: $spacing4;
 
-$feedSpacingLeft: $feedAvatarSpacingLeft + $avatarWidth +
-  $feedAvatarSpacingRight;
-$feedSpacingRight: $spacing12;
+// This is the spacing on either side of the avatar
+// in the left column of activities
+$activityAvatarSpacingLeft--feed: $spacing6;
+$activityAvatarSpacingLeft--feed--mobile: $spacing4;
 
-// MOBILE
-$feedAvatarSpacingLeft--mobile: $spacing4;
-$feedAvatarSpacingRight--mobile: $spacing4;
+$activityAvatarSpacingRight--feed: $spacing6;
+$activityAvatarSpacingRight--feed--mobile: $spacing4;
 
-$feedSpacingLeft--mobile: $feedAvatarSpacingLeft--mobile + $avatarWidth +
-  $feedAvatarSpacingRight--mobile;
-$feedSpacingRight--mobile: $spacing4;
+// This is the width of the entire left column
+// that contains the avatar.
+//
+// Use it to line up components that go above/below
+// the component with the avatar
+$activitySpacingLeft--feed: $activityAvatarSpacingLeft--feed +
+  $activityAvatarWidth + $activityAvatarSpacingRight--feed;
+$activitySpacingLeft--feed--mobile: $activityAvatarSpacingLeft--feed--mobile +
+  $activityAvatarWidth + $activityAvatarSpacingRight--feed--mobile;
+
+$activitySpacingRight--feed: $spacing12;
+$activitySpacingRight--feed--mobile: $spacing4;
 
 ///////////////////////////////////////////
 // SINGLE POST PAGE
 ///////////////////////////////////////////
-$singlePostAvatarSpacingLeft: $spacing8;
-$singlePostAvatarSpacingRight: $spacing4;
 
-$singlePostSpacingLeft: $singlePostAvatarSpacingLeft + $avatarWidth +
-  $singlePostAvatarSpacingRight;
-$singlePostSpacingRight: $spacing12;
+// Same as above but for single post pages
+$activityAvatarSpacingLeft--single: $spacing8;
+$activityAvatarSpacingLeft--single--mobile: $spacing4;
 
-// MOBILE
-$singlePostAvatarSpacingLeft--mobile: $spacing4;
-$singlePostAvatarSpacingRight--mobile: $spacing4;
+$activityAvatarSpacingRight--single: $spacing4;
+$activityAvatarSpacingRight--single--mobile: $spacing4;
 
-$singlePostSpacingLeft--mobile: $singlePostAvatarSpacingLeft--mobile +
-  $avatarWidth + $singlePostAvatarSpacingRight--mobile;
-$singlePostSpacingRight--mobile: $spacing4;
+$activitySpacingLeft--single: $activityAvatarSpacingLeft--single +
+  $activityAvatarWidth + $activityAvatarSpacingRight--single;
+$activitySpacingLeft--single--mobile: $activityAvatarSpacingLeft--single--mobile +
+  $activityAvatarWidth + $activityAvatarSpacingRight--single--mobile;
+
+$activitySpacingRight--single: $spacing12;
+$activitySpacingRight--single--mobile: $spacing4;
 
 ///////////////////////////////////////////
-// MODAL
+// ACTIVITY MODAL
 ///////////////////////////////////////////
-$modalScrollableContainerSpacing: $spacing4;
+
+// Spacing on either side of the components that
+// live in the right column of the activity modal
+$activitySpacing--modal: $spacing4;
 
 ///////////////////////////////////////////
 // MINIMAL MODE
 ///////////////////////////////////////////
-$minimalModeSpacing: $spacing4;
+
+// Spacing on either side of the components that
+// live in suggested posts in the sidebar of
+// single post pages
+$activitySpacing--minimalMode: $spacing4;
+
+///////////////////////////////////////////
