--- a/src/app/modules/newsfeed/activity-v2/toolbar/toolbar.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/toolbar/toolbar.component.ng.scss
@@ -7,14 +7,14 @@
   // *********************************
 
   .m-activityToolbar__actions {
-    padding-left: $feedSpacingLeft;
-    padding-right: $feedSpacingRight;
-    padding-top: $spacing5;
+    padding-left: $activitySpacingLeft--feed;
+    padding-right: $activitySpacingRight--feed;
+    padding-top: $spacing6;
     padding-bottom: $spacing6;
 
     @media screen and (max-width: $max-mobile) {
-      padding-left: $feedSpacingLeft--mobile;
-      padding-right: $feedSpacingRight--mobile;
+      padding-left: $activitySpacingLeft--feed--mobile;
+      padding-right: $activitySpacingRight--feed--mobile;
     }
   }
 
@@ -33,8 +33,8 @@
   m-activityV2__modal & {
     .m-activityToolbar__actions,
     .m-activityToolbar__metrics {
-      padding-left: $modalScrollableContainerSpacing + $spacing3;
-      padding-right: $modalScrollableContainerSpacing + $spacing3;
+      padding-left: $activitySpacing--modal + $spacing3;
+      padding-right: $activitySpacing--modal + $spacing3;
       padding-top: $spacing4;
       padding-bottom: $spacing4;
     }
@@ -78,12 +78,12 @@
   m-newsfeed--single & {
     .m-activityToolbar__actions,
     .m-activityToolbar__metrics {
-      padding-left: $singlePostSpacingLeft;
-      padding-right: $singlePostSpacingRight;
+      padding-left: $activitySpacingLeft--single;
+      padding-right: $activitySpacingRight--single;
 
       @media screen and (max-width: $max-mobile) {
-        padding-left: $singlePostSpacingLeft--mobile;
-        padding-right: $singlePostSpacingRight--mobile;
+        padding-left: $activitySpacingLeft--single--mobile;
+        padding-right: $activitySpacingRight--single--mobile;
       }
     }
 
@@ -157,6 +157,10 @@
       ::ng-deep .m-activityRemindButton__icon {
         line-height: 18px;
         cursor: pointer;
+
+        .minds-counter {
+          @include body2Bold;
+        }
 
         i.material-icons {
           font-size: 18px;
