--- a/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.html
+++ b/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.html
@@ -4,10 +4,11 @@
     #rotatorEl
     class="m-newsfeed__boostRotator"
     [style.min-height]="height"
+    [style.max-height]="height"
     [hidden]="!boosts.length"
   >
     <div
-      *ngIf="boosts.length > 0"
+      *ngIf="boosts.length > 0 && !activityV2Feature"
       class="m-carousel__overflowScrollButton--left"
       (click)="prev()"
     >
@@ -35,7 +36,7 @@
       ></m-activity>
     </ng-container>
     <div
-      *ngIf="boosts.length > 0"
+      *ngIf="boosts.length > 0 && !activityV2Feature"
       class="m-carousel__overflowScrollButton--right"
       (click)="next()"
     >
