--- a/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.ng.scss
+++ b/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.ng.scss
@@ -5,9 +5,13 @@
   &.m-newsfeedBoostRotator--activityV2 {
     .m-newsfeed__boostRotator {
       margin: 0;
-    }
-    [class*='m-carousel__overflowScrollButton--'] {
-      display: none !important;
+
+      ::ng-deep {
+        m-activity {
+          width: 100%;
+          height: 100%;
+        }
+      }
     }
   }
 
