--- a/src/app/modules/comments/poster/poster.component.ng.scss
+++ b/src/app/modules/comments/poster/poster.component.ng.scss
@@ -6,6 +6,16 @@
   // ******************************************
 
   m-activityV2 & {
+    .m-commentPoster__avatar {
+      a {
+        img {
+          @include m-theme() {
+            border: none;
+          }
+        }
+      }
+    }
+
     .m-commentPoster__form {
       ::ng-deep minds-textarea {
         .m-placeholder {
