--- a/src/app/modules/newsfeed/activity-v2/owner-block/owner-block.component.html
+++ b/src/app/modules/newsfeed/activity-v2/owner-block/owner-block.component.html
@@ -54,7 +54,7 @@
       </a>
     </ng-container>
     <!-- ---------------------------- -->
-    <!-- PERMLINK -->
+    <!-- PERMALINK -->
     <!-- ---------------------------- -->
     <ng-container
       *ngIf="
