--- a/src/app/modules/newsfeed/feeds/feed-header/feed-header.component.ng.scss
+++ b/src/app/modules/newsfeed/feeds/feed-header/feed-header.component.ng.scss
@@ -17,4 +17,14 @@
       top: 2px;
     }
   }
+
+  &.m-feedHeader--activityV2 {
+    .m-newsfeed__subscribed__feedType {
+      padding: $spacing6 $spacing5;
+
+      @media screen and (max-width: $max-mobile) {
+        padding: $spacing5 $spacing5 $spacing5 $spacing4;
+      }
+    }
+  }
 }
