use mResized instead of external lib's resized

--- a/src/app/modules/suggestions/channel-recommendation/channel-recommendation.component.html
+++ b/src/app/modules/suggestions/channel-recommendation/channel-recommendation.component.html
@@ -4,7 +4,7 @@
   *ngIf="visible"
 >
   <article
-    (resized)="onResized($event)"
+    (mResized)="onResized($event)"
     *ngIf="(recommendations$ | async).length"
   >
     <header>
