--- a/src/app/modules/channels/v2/header/header.component.html
+++ b/src/app/modules/channels/v2/header/header.component.html
@@ -19,7 +19,7 @@
   <div class="m-channelHeader__info">
     <h1 class="m-channelHeaderInfo__name">
       <span>
-        {{ channel.name }}
+        {{ channel.name | slice: 0:50 }}
       </span>
 
       <m-channel--badges
@@ -31,7 +31,7 @@
     </h1>
 
     <span class="m-channelHeaderInfo__username">
-      @{{ channel.username }}
+      @{{ channel.username | slice: 0:50 }}
       <span *ngIf="shouldShowSubscribesToYou(channel)">
         Subscribes to you
       </span>
