--- a/src/app/modules/settings-v2/account/notifications-v3/push-notifications/push-notifications.component.html
+++ b/src/app/modules/settings-v2/account/notifications-v3/push-notifications/push-notifications.component.html
@@ -6,11 +6,21 @@
     class="m-settingsV2__desc"
     i18n="@@SETTINGS_NOTIFICATIONS_PUSH__DESCRIPTION"
   >
-    Control which mobile push notifications you receive, and when.
+    Control which push notifications you receive, and when.
   </div>
 </m-settingsV2__header>
 <m-loadingSpinner [inProgress]="initializing$ | async"></m-loadingSpinner>
 <ng-container *ngIf="!(initializing$ | async)">
+  <ng-container *ngIf="!(pushNotificationsEnabled$ | async); else form">
+    <m-button (onAction)="onEnablePushNotifications()" solid="true" color="blue">
+      <span i18n="@@SETTINGS_NOTIFICATIONS_PUSH__ENABLE"
+        >Enable Notifications for this device</span
+      >
+    </m-button>
+  </ng-container>
+</ng-container>
+
+<ng-template #form>
   <div
     class="
       m-pushNotifSettings__optionContainer
@@ -63,4 +73,4 @@
       }}</span>
     </div>
   </div>
-</ng-container>
+</ng-template>
