--- a/src/app/modules/newsfeed/feeds/top-highlights/top-highlights.component.ng.scss
+++ b/src/app/modules/newsfeed/feeds/top-highlights/top-highlights.component.ng.scss
@@ -24,6 +24,11 @@
         }
       }
     }
+    .m-topHighlights__showMore__container {
+      .m-topHighlights__showMore__link {
+        padding-right: $spacing6;
+      }
+    }
   }
 
   ul {
