--- a/src/app/modules/wire/button/button.component.html
+++ b/src/app/modules/wire/button/button.component.html
@@ -5,7 +5,7 @@
 >
   <ng-container *ngIf="!features.has('pay'); else tipButton">
     <i class="ion-icon ion-flash"></i>
-    <span>Wire</span>
+    <span *ngIf="!activityV2Feature">Wire</span>
   </ng-container>
   <ng-template #tipButton>
     <span *ngIf="!activityV2Feature" i18n="@@COMMON__TIP">Tip</span>
